# Mustard

./: .gitignore  AGENTS.md  HEARTBEAT.md  MEMORY.md  README.md  SOUL.md  TOOLS.md  USER.md  _run_bench.py  pyproject.toml  start_carm.cmd  start_carm.vbs  start_claw_team.cmd  start_claw_team.vbs
artifacts/: attention_flow_latest.json  attention_training_views_latest.json  combined_tool_policy_candidate_latest.json  comparison_search_candidate_latest.json  conflict_verify_candidate_latest.json  current_best.json  decide_top_human_review_latest.json  learning_focus_eval_latest.json  learning_focus_search_first_adversarial_latest.json  learning_intake_auto_review_shadow_latest.json  learning_intake_candidate_dataset_latest.json  learning_intake_candidate_import_latest.json  learning_intake_human_gate_packet_latest.json  learning_intake_human_review_apply_latest.json  learning_intake_human_review_decision_latest.json  learning_intake_human_review_draft_latest.json  learning_intake_human_review_draft_sync_latest.json  learning_intake_human_review_panel_latest.json  learning_intake_human_review_preview_latest.json  learning_intake_review_queue_latest.json  learning_intake_suggested_rebuild_latest.json  learning_intake_suggested_shadow_delta_latest.json  reasoning_pattern_codec_latest.json  reviewed_import_shadow_learning_focus_latest.json  reviewed_import_shadow_rebuild_latest.json  tool_boundary_candidate_latest.json
carm/: __init__.py  actions.py  attention_flow.py  bridge.py  concepts.py  core.py  decoder.py  desktop.py  desktop_runtime.py  encoder.py  evolution.py  (+21 more)
(+380 files in other folders)
