[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carm-mvp"
version = "0.5.5"
description = "Compact Agentic Reasoning Model minimal prototype"
requires-python = ">=3.10"
dependencies = [
    "duckduckgo-search>=4.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
semantic = ["sentence-transformers>=2.0"]
desktop = [
    "Pillow>=9.0",
    "rapidocr-onnxruntime>=1.3",
    "pywin32>=305; sys_platform == 'win32'",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]
all = ["carm-mvp[semantic,desktop,dev]"]

[tool.pytest.ini_options]
testpaths = ["tests"]
